--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,93 +3,66 @@ name: Deploy Portfolio
 on:
   push:
     branches:
-      - master  # Change if your main branch is different
+      - master
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2️⃣ Setup SSH agent
       - name: Set up SSH
         uses: webfactory/ssh-agent@v0.7.0
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      # 3️⃣ Add server to known_hosts
       - name: Add server to known_hosts
         run: |
           mkdir -p ~/.ssh
           ssh-keyscan -p ${{ secrets.SSH_PORT }} ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
 
-      # 4️⃣ Deploy via SSH
       - name: Deploy to DigitalOcean
         env:
           ENV_FILE_CONTENT: ${{ secrets.ENV_FILE }}
           ENV_FRONTEND_CONTENT: ${{ secrets.ENV_FRONTEND_FILE }}
         run: |
-          ssh -p ${{ secrets.SSH_PORT }} ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} bash -s <<'EOF'
+          # 1) ensure repo exists & pull latest
+          ssh -p ${{ secrets.SSH_PORT }} ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} 'bash -s' <<'REMOTE'
             set -euxo pipefail
-
-            ##############################
-            # Project directories
-            ##############################
             PROJECT_DIR=/var/www/html/portfolio
-            LARAVEL_DIR=$PROJECT_DIR/auth-system
-            FRONTEND_DIR=$PROJECT_DIR/vue-auth-system
             BRANCH=master
-
-            mkdir -p "$LARAVEL_DIR" "$FRONTEND_DIR"
+            mkdir -p "$PROJECT_DIR"
             cd "$PROJECT_DIR"
-
-            ##############################
-            # Pull or clone repository
-            ##############################
             if [ -d .git ]; then
               git fetch origin $BRANCH
               git reset --hard origin/$BRANCH
             else
               git clone -b $BRANCH git@github.com:kayzinkhaing/portfolio-cqrs-clean-architecture.git .
             fi
+          REMOTE
 
-            ##############################
-            # Write .env files safely
-            ##############################
-            cat > "$LARAVEL_DIR/.env" <<'EOL'
-            $ENV_FILE_CONTENT
-            EOL
+          # 2) upload Laravel .env (preserve multiline exactly; remove CRLF)
+          printf '%s' "$ENV_FILE_CONTENT" | ssh -p ${{ secrets.SSH_PORT }} ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} 'sed "s/\r$//" > /var/www/html/portfolio/auth-system/.env && chmod 600 /var/www/html/portfolio/auth-system/.env'
 
-            cat > "$FRONTEND_DIR/.env" <<'EOL'
-            $ENV_FRONTEND_CONTENT
-            EOL
+          # 3) upload Frontend .env
+          printf '%s' "$ENV_FRONTEND_CONTENT" | ssh -p ${{ secrets.SSH_PORT }} ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} 'sed "s/\r$//" > /var/www/html/portfolio/vue-auth-system/.env && chmod 600 /var/www/html/portfolio/vue-auth-system/.env'
 
-            chmod 600 "$LARAVEL_DIR/.env" "$FRONTEND_DIR/.env"
+          # 4) run docker-compose and artisan commands remotely
+          ssh -p ${{ secrets.SSH_PORT }} ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} 'bash -s' <<'REMOTE'
+            set -euxo pipefail
+            cd /var/www/html/portfolio
 
-            ##############################
-            # Stop existing containers
-            ##############################
             docker compose -f docker-stack/docker-compose.yml down || true
-
-            ##############################
-            # Build & start containers
-            ##############################
             docker compose -f docker-stack/docker-compose.yml -p portfolio up -d --build --remove-orphans
 
-            ##############################
-            # Wait for Laravel container to be ready
-            ##############################
+            # wait until laravel container responds to artisan status
             until docker compose exec -T laravel php artisan migrate:status >/dev/null 2>&1; do
-              echo "Laravel not ready yet, sleeping 5 seconds..."
+              echo "Laravel not ready yet; sleeping 5s..."
               sleep 5
             done
 
-            ##############################
-            # Run Laravel Artisan commands
-            ##############################
             docker compose exec -T laravel php artisan migrate --force
             docker compose exec -T laravel php artisan storage:link || true
             docker compose exec -T laravel php artisan config:clear
@@ -97,10 +70,5 @@ jobs:
             docker compose exec -T laravel php artisan route:clear
             docker compose exec -T laravel php artisan view:clear
 
-            ##############################
-            # Reload Nginx
-            ##############################
             sudo nginx -s reload || true
-
-            echo "✅ Deployment completed successfully!"
-          EOF
+          REMOTE
