--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Portfolio
 on:
   push:
     branches:
-      - master
+      - master  # Change if your main branch is different
 
 jobs:
   deploy:
@@ -28,62 +28,66 @@ jobs:
 
       # 4️⃣ Deploy via SSH
       - name: Deploy to DigitalOcean
-        env:
-          ENV_FILE: ${{ secrets.ENV_FILE }}
-          ENV_FRONTEND_FILE: ${{ secrets.ENV_FRONTEND_FILE }}
         run: |
-          ssh -p ${{ secrets.SSH_PORT }} ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} bash -s <<EOF
+          ssh -p ${{ secrets.SSH_PORT }} ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
             set -euxo pipefail
 
             ##############################
             # Project directories
             ##############################
             PROJECT_DIR=/var/www/html/portfolio
-            LARAVEL_DIR=\$PROJECT_DIR/auth-system
-            FRONTEND_DIR=\$PROJECT_DIR/vue-auth-system
+            LARAVEL_DIR=$PROJECT_DIR/auth-system
+            FRONTEND_DIR=$PROJECT_DIR/vue-auth-system
             BRANCH=master
 
-            mkdir -p "\$LARAVEL_DIR" "\$FRONTEND_DIR"
-            cd "\$PROJECT_DIR"
+            # Create project folder if missing
+            mkdir -p "$PROJECT_DIR"
+            cd "$PROJECT_DIR"
 
-            ##############################
             # Pull or clone repository
-            ##############################
             if [ -d .git ]; then
-              git fetch origin \$BRANCH
-              git reset --hard origin/\$BRANCH
+              echo "Pulling latest code..."
+              git fetch origin $BRANCH
+              git reset --hard origin/$BRANCH
             else
-              git clone -b \$BRANCH git@github.com:kayzinkhaing/portfolio-cqrs-clean-architecture.git .
+              echo "Cloning repository..."
+              git clone -b $BRANCH git@github.com:kayzinkhaing/portfolio-cqrs-clean-architecture.git .
             fi
 
             ##############################
-            # Write .env files safely
+            # Deploy .env files safely
             ##############################
-            printf '%s\n' "$ENV_FILE" > "\$LARAVEL_DIR/.env"
-            printf '%s\n' "$ENV_FRONTEND_FILE" > "\$FRONTEND_DIR/.env"
-            chmod 600 "\$LARAVEL_DIR/.env" "\$FRONTEND_DIR/.env"
+            mkdir -p "$LARAVEL_DIR" "$FRONTEND_DIR"
+            echo "${{ secrets.ENV_FILE }}" > "$LARAVEL_DIR/.env"
+            echo "${{ secrets.ENV_FRONTEND_FILE }}" > "$FRONTEND_DIR/.env"
+            chmod 600 "$LARAVEL_DIR/.env" "$FRONTEND_DIR/.env"
+
 
             ##############################
             # Stop existing containers
             ##############################
+            echo "Stopping existing containers..."
             docker compose -f docker-stack/docker-compose.yml down || true
 
             ##############################
             # Build & start containers
             ##############################
-            docker compose -f docker-stack/docker-compose.yml -p portfolio up -d --build --remove-orphans
+            echo "Starting containers..."
+            docker compose -f docker-stack/docker-compose.yml -p portfolio up -d --build
 
             ##############################
             # Wait for Laravel container to be ready
             ##############################
+            echo "Waiting for Laravel container..."
             until docker compose exec -T laravel php artisan migrate:status >/dev/null 2>&1; do
-              echo "⏳ Waiting for Laravel container..."
+              echo "Laravel not ready yet, sleeping 5 seconds..."
               sleep 5
             done
 
             ##############################
             # Run Laravel Artisan commands
             ##############################
+            echo "Running Laravel Artisan commands..."
             docker compose exec -T laravel php artisan migrate --force
             docker compose exec -T laravel php artisan storage:link || true
             docker compose exec -T laravel php artisan config:clear
@@ -94,6 +98,7 @@ jobs:
             ##############################
             # Reload Nginx
             ##############################
+            echo "Reloading Nginx..."
             sudo nginx -s reload || true
 
             echo "✅ Deployment completed successfully!"
