--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,14 +3,14 @@ name: Deploy Portfolio
 on:
   push:
     branches:
-      - master  # Change if your main branch is different
+      - master   # Change if your main branch is different
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout repository
+      # 1️⃣ Checkout repo
       - name: Checkout repository
         uses: actions/checkout@v3
 
@@ -41,8 +41,7 @@ jobs:
             BRANCH=master
 
             # Create project folder if missing
-            mkdir -p "$PROJECT_DIR"
-            cd "$PROJECT_DIR"
+            cd $PROJECT_DIR || { mkdir -p $PROJECT_DIR; cd $PROJECT_DIR; }
 
             # Pull or clone repository
             if [ -d .git ]; then
@@ -57,11 +56,9 @@ jobs:
             ##############################
             # Deploy .env files safely
             ##############################
-            mkdir -p "$LARAVEL_DIR" "$FRONTEND_DIR"
-            echo "${{ secrets.ENV_FILE }}" > "$LARAVEL_DIR/.env"
-            echo "${{ secrets.ENV_FRONTEND_FILE }}" > "$FRONTEND_DIR/.env"
-            chmod 600 "$LARAVEL_DIR/.env" "$FRONTEND_DIR/.env"
-
+            echo "${{ secrets.ENV_FILE }}" > $LARAVEL_DIR/.env
+            echo "${{ secrets.ENV_FRONTEND }}" > $FRONTEND_DIR/.env
+            sudo chown $USER:$USER $LARAVEL_DIR/.env $FRONTEND_DIR/.env
 
             ##############################
             # Stop existing containers
@@ -73,7 +70,7 @@ jobs:
             # Build & start containers
             ##############################
             echo "Starting containers..."
-            docker compose -f docker-stack/docker-compose.yml -p portfolio up -d --build
+            docker compose -f docker-stack/docker-compose.yml up -d --build
 
             ##############################
             # Wait for Laravel container to be ready
