--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout repo
+      # 1️⃣ Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v3
 
@@ -41,9 +41,12 @@ jobs:
             BRANCH=master
 
             # Create project folder if missing
-            cd $PROJECT_DIR || { mkdir -p $PROJECT_DIR; cd $PROJECT_DIR; }
+            mkdir -p "$LARAVEL_DIR" "$FRONTEND_DIR"
+            cd "$PROJECT_DIR"
 
+            ##############################
             # Pull or clone repository
+            ##############################
             if [ -d .git ]; then
               echo "Pulling latest code..."
               git fetch origin $BRANCH
@@ -54,28 +57,25 @@ jobs:
             fi
 
             ##############################
-            # Deploy .env files safely
+            # Deploy .env files safely (Base64)
             ##############################
-            echo "${{ secrets.ENV_FILE }}" > $LARAVEL_DIR/.env
-            echo "${{ secrets.ENV_FRONTEND }}" > $FRONTEND_DIR/.env
-            sudo chown $USER:$USER $LARAVEL_DIR/.env $FRONTEND_DIR/.env
+            echo "${{ secrets.ENV_FILE }}" | base64 -d > "$LARAVEL_DIR/.env"
+            echo "${{ secrets.ENV_FRONTEND_FILE }}" | base64 -d > "$FRONTEND_DIR/.env"
+            chmod 600 "$LARAVEL_DIR/.env" "$FRONTEND_DIR/.env"
 
             ##############################
             # Stop existing containers
             ##############################
-            echo "Stopping existing containers..."
-            docker compose -f docker-stack/docker-compose.yml down || true
+            docker compose -f docker-stack/docker-compose.yml down -v --remove-orphans || true
 
             ##############################
             # Build & start containers
             ##############################
-            echo "Starting containers..."
             docker compose -f docker-stack/docker-compose.yml up -d --build
 
             ##############################
             # Wait for Laravel container to be ready
             ##############################
-            echo "Waiting for Laravel container..."
             until docker compose exec -T laravel php artisan migrate:status >/dev/null 2>&1; do
               echo "Laravel not ready yet, sleeping 5 seconds..."
               sleep 5
@@ -84,7 +84,6 @@ jobs:
             ##############################
             # Run Laravel Artisan commands
             ##############################
-            echo "Running Laravel Artisan commands..."
             docker compose exec -T laravel php artisan migrate --force
             docker compose exec -T laravel php artisan storage:link || true
             docker compose exec -T laravel php artisan config:clear
@@ -95,7 +94,6 @@ jobs:
             ##############################
             # Reload Nginx
             ##############################
-            echo "Reloading Nginx..."
             sudo nginx -s reload || true
 
             echo "✅ Deployment completed successfully!"
