--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,14 +3,14 @@ name: Deploy Portfolio
 on:
   push:
     branches:
-      - master   # Change if your main branch is different
+      - master  # Change if your main branch is different
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout repo
+      # 1️⃣ Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v3
 
@@ -29,42 +29,61 @@ jobs:
       # 4️⃣ Deploy via SSH
       - name: Deploy to DigitalOcean
         run: |
-          ssh -p ${{ secrets.SSH_PORT }} ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} "bash -s" << REMOTE_EOF
+          ssh -p ${{ secrets.SSH_PORT }} ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
             set -euxo pipefail
 
-            # Pass secrets inside SSH session
-            ENV_FILE_B64='${{ secrets.ENV_FILE }}'
-            ENV_FRONTEND_FILE_B64='${{ secrets.ENV_FRONTEND_FILE }}'
-
+            ##############################
+            # Project directories
+            ##############################
             PROJECT_DIR=/var/www/html/portfolio
-            LARAVEL_DIR="\$PROJECT_DIR/auth-system"
-            FRONTEND_DIR="\$PROJECT_DIR/vue-auth-system"
+            LARAVEL_DIR=$PROJECT_DIR/auth-system
+            FRONTEND_DIR=$PROJECT_DIR/vue-auth-system
             BRANCH=master
 
-            mkdir -p "\$LARAVEL_DIR" "\$FRONTEND_DIR"
-            cd "\$PROJECT_DIR" || { echo "Failed to cd \$PROJECT_DIR"; exit 1; }
+            # Ensure directories exist
+            mkdir -p "$LARAVEL_DIR" "$FRONTEND_DIR"
+            cd "$PROJECT_DIR"
 
+            ##############################
+            # Pull or clone repository
+            ##############################
             if [ -d .git ]; then
               echo "Pulling latest code..."
-              git fetch origin \$BRANCH
-              git reset --hard origin/\$BRANCH
+              git fetch origin $BRANCH
+              git reset --hard origin/$BRANCH
             else
               echo "Cloning repository..."
-              git clone -b \$BRANCH git@github.com:kayzinkhaing/portfolio-cqrs-clean-architecture.git .
+              git clone -b $BRANCH git@github.com:kayzinkhaing/portfolio-cqrs-clean-architecture.git .
             fi
 
-            echo "\$ENV_FILE_B64" | base64 -d > "\$LARAVEL_DIR/.env"
-            echo "\$ENV_FRONTEND_FILE_B64" | base64 -d > "\$FRONTEND_DIR/.env"
-            chmod 600 "\$LARAVEL_DIR/.env" "\$FRONTEND_DIR/.env"
+            ##############################
+            # Deploy .env files safely
+            ##############################
+            echo '${{ secrets.ENV_FILE }}' > "$LARAVEL_DIR/.env"
+            echo '${{ secrets.ENV_FRONTEND_FILE }}' > "$FRONTEND_DIR/.env"
+            chmod 600 "$LARAVEL_DIR/.env" "$FRONTEND_DIR/.env"
 
-            docker compose -f docker-stack/docker-compose.yml down -v --remove-orphans || true
+            ##############################
+            # Stop existing containers
+            ##############################
+            docker compose -f docker-stack/docker-compose.yml down --remove-orphans || true
+
+            ##############################
+            # Build & start containers
+            ##############################
             docker compose -f docker-stack/docker-compose.yml up -d --build
 
+            ##############################
+            # Wait for Laravel container to be ready
+            ##############################
             until docker compose exec -T laravel php artisan migrate:status >/dev/null 2>&1; do
               echo "Laravel not ready yet, sleeping 5 seconds..."
               sleep 5
             done
 
+            ##############################
+            # Run Laravel Artisan commands
+            ##############################
             docker compose exec -T laravel php artisan migrate --force
             docker compose exec -T laravel php artisan storage:link || true
             docker compose exec -T laravel php artisan config:clear
@@ -72,6 +91,10 @@ jobs:
             docker compose exec -T laravel php artisan route:clear
             docker compose exec -T laravel php artisan view:clear
 
+            ##############################
+            # Reload Nginx
+            ##############################
             sudo nginx -s reload || true
+
             echo "✅ Deployment completed successfully!"
-          REMOTE_EOF
+          EOF
