--- a/docker-stack/docker-compose.yml
+++ b/docker-stack/docker-compose.yml
@@ -1,14 +1,4 @@
-version: "3.9"
-
-networks:
-  appnet:
-
-volumes:
-  mysql_data:
-  mongo_data:
-  rabbitmq_data:
-  node_modules_vue:
-
+version: '3.8'
 services:
 
   # -----------------------
@@ -18,16 +8,13 @@ services:
     build:
       context: ../auth-system
       dockerfile: Dockerfile
-    container_name: laravel-backend
     volumes:
-      # Only mount editable folders
+      # Editable folders
       - ../auth-system/app:/var/www/html/portfolio/auth-system/app:cached
       - ../auth-system/routes:/var/www/html/portfolio/auth-system/routes:cached
       - ../auth-system/config:/var/www/html/portfolio/auth-system/config:cached
       - ../auth-system/graphql:/var/www/html/portfolio/auth-system/graphql:cached
-      - ../auth-system/database:/var/www/html/portfolio/auth-system/database:cached
-
-      # Let container manage heavy folders for performance
+      # Storage handled by container
       - /var/www/html/portfolio/auth-system/storage
     expose:
       - "9000"
@@ -35,6 +22,7 @@ services:
       - ../auth-system/.env
     networks:
       - appnet
+      - proxy
     depends_on:
       mysql:
         condition: service_healthy
@@ -55,7 +43,6 @@ services:
     build:
       context: ../auth-system
       dockerfile: Dockerfile
-    container_name: laravel-worker
     command: php artisan queue:work --queue=domain-events,default --sleep=1 --tries=5
     restart: always
     volumes:
@@ -65,6 +52,7 @@ services:
       - ../auth-system/.env
     networks:
       - appnet
+      - proxy
     depends_on:
       laravel:
         condition: service_healthy
@@ -76,19 +64,18 @@ services:
   # -----------------------
   # Nginx
   # -----------------------
-  nginx:
-    image: nginx:alpine
-    container_name: nginx
-    ports:
-      - "${NGINX_PORT:-8000}:80"
-    volumes:
-      - ../auth-system:/var/www/html/portfolio/auth-system:cached
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - laravel
-    networks:
-      - appnet
-
+  # nginx:
+  #   image: nginx:alpine
+  #   restart: always
+  #   volumes:
+  #     - ../auth-system:/var/www/html/portfolio/auth-system:cached
+  #     - ./nginx/sites-available/kayzinkhine.com.conf:/etc/nginx/conf.d/kayzinkhine.com.conf:ro
+  #     - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+  #   depends_on:
+  #     - laravel
+  #   networks:
+  #     - appnet
+  #     - proxy
   # -----------------------
   # Vue Frontend (Vite)
   # -----------------------
@@ -96,27 +83,27 @@ services:
     build:
       context: ../vue-auth-system
       dockerfile: Dockerfile
-    container_name: vue-frontend
     volumes:
       - ../vue-auth-system/src:/app/src:cached
       - ../vue-auth-system/tests:/app/tests:cached
     ports:
       - "${VITE_PORT:-5173}:5173"
+    env_file:
+      - ../vue-auth-system/.env
     environment:
       - CHOKIDAR_USEPOLLING=true
-      - VITE_GRAPHQL_URL=${VITE_GRAPHQL_URL:-http://nginx:80/graphql}
     command: npm run dev -- --host 0.0.0.0
     networks:
       - appnet
+      - proxy
 
   # -----------------------
   # MySQL
   # -----------------------
   mysql:
     image: mysql:8.0
-    container_name: mysql-db
-    ports:
-      - "3308:3306"
+    expose:
+      - "3306"
     volumes:
       - mysql_data:/var/lib/mysql
     environment:
@@ -124,6 +111,7 @@ services:
       MYSQL_DATABASE: ${DB_DATABASE:-laravel}
     networks:
       - appnet
+      - proxy
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "mysql", "-u${DB_USERNAME:-root}", "-p${DB_PASSWORD:-root}"]
       interval: 10s
@@ -135,13 +123,13 @@ services:
   # -----------------------
   mongo:
     image: mongo:6
-    container_name: mongo-db
     ports:
-      - "${MONGO_PORT:-27017}:27017"
+      - "27017:27017"
     volumes:
-      - mongo_data:/data/db
+      - portfolio_mongo_data:/data/db
     networks:
       - appnet
+      - proxy
     healthcheck:
       test: ["CMD", "mongosh", "--quiet", "--eval", "db.runCommand({ ping: 1 })"]
       interval: 10s
@@ -153,9 +141,9 @@ services:
   # -----------------------
   rabbitmq:
     image: rabbitmq:3-management
-    container_name: rabbitmq
+    expose:
+      - "5672"
     ports:
-      - "${RABBITMQ_PORT:-5672}:5672"
       - "${RABBITMQ_UI_PORT:-15672}:15672"
     environment:
       RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER:-guest}
@@ -164,6 +152,7 @@ services:
       - rabbitmq_data:/var/lib/rabbitmq
     networks:
       - appnet
+      - proxy
     healthcheck:
       test: ["CMD", "rabbitmqctl", "status"]
       interval: 10s
@@ -175,7 +164,6 @@ services:
   # -----------------------
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
-    container_name: phpmyadmin
     restart: always
     ports:
       - "8082:80"
@@ -184,3 +172,15 @@ services:
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD:-root}
     networks:
       - appnet
+      - proxy
+
+volumes:
+  mysql_data:
+  portfolio_mongo_data:
+  rabbitmq_data:
+  node_modules_vue:
+
+networks:
+  appnet:
+  proxy:
+    external: true
