--- a/vue-auth-system/.env.production
+++ b/vue-auth-system/.env.production
@@ -1,5 +1,7 @@
-VITE_API_URL=http://188.166.220.6/portfolio
-VITE_FRONTEND_URL=http://188.166.220.6/portfolio
+VITE_API_BASE=http://188.166.220.6:8000
+VITE_API_URL=http://188.166.220.6:8000/api
+VITE_GRAPHQL_URL=http://188.166.220.6:8000/graphql
+FRONTEND_URL=http://www.kayzinkhine.com:5173
 
 VITE_PUSHER_APP_KEY=86025d896605abd176ac
 VITE_PUSHER_APP_CLUSTER=mt1
