--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,7 +61,7 @@ jobs:
             # Docker: stop, rebuild, and start
             ##############################
             docker compose -f docker-stack/docker-compose.yml down
-            docker compose -f docker-stack/docker-compose.yml up -d --build
+            docker compose -f docker-stack/docker-compose.yml up -d
 
             ##############################
             # Run Laravel migrations
