--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,6 +61,7 @@ jobs:
             # Docker: stop, rebuild, and start
             ##############################
             docker compose -f docker-stack/docker-compose.yml down
+            docker network create portfolio_appnet || true
             docker compose -f docker-stack/docker-compose.yml up -d
 
             ##############################
