--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,17 +63,24 @@ jobs:
             docker network inspect proxy >/dev/null 2>&1 || docker network create proxy
 
             ##############################
-            # Docker: stop, rebuild, and start
+            # Check if Docker files changed
             ##############################
-            docker compose -p portfolio -f docker-stack/docker-compose.yml down
-            docker compose -p portfolio -f docker-stack/docker-compose.yml up -d --build
+            CHANGED_FILES=\$(git diff --name-only HEAD~1 HEAD || true)
+            if echo "\$CHANGED_FILES" | grep -qE '(docker-stack/|Dockerfile)'; then
+              echo "Docker-related files changed → rebuilding..."
+              docker compose -p portfolio -f docker-stack/docker-compose.yml down
+              docker compose -p portfolio -f docker-stack/docker-compose.yml up -d --build
+            else
+              echo "No Docker changes → starting containers without rebuild..."
+              docker compose -p portfolio -f docker-stack/docker-compose.yml up -d
+            fi
 
             ##############################
             # Wait for essential containers to be healthy
             ##############################
             for service in mongo rabbitmq mysql; do
-              echo "Waiting for $service to be healthy..."
-              until [ "$(docker inspect -f '{{.State.Health.Status}}' portfolio-$service-1 2>/dev/null || echo unhealthy)" == "healthy" ]; do
+              echo "Waiting for \$service to be healthy..."
+              until [ "\$(docker inspect -f '{{.State.Health.Status}}' portfolio-\$service-1 2>/dev/null || echo unhealthy)" == "healthy" ]; do
                 sleep 5
               done
             done
